# rdf-trig

./: Cargo.toml  README.md
src/: errors.rs  graphs.rs  lib.rs  literal.rs  namespace.rs  nodes.rs  quads.rs  raw.rs  store.rs  traits.rs  triples.rs  utils.rs
src/datastore/: mod.rs  views.rs
src/groups/: mod.rs  quads.rs  triples.rs
src/namespaces/: mod.rs  predicates.rs  statics.rs  store.rs
src/nodes/: blank.rs  graph.rs  iri.rs  mod.rs  object.rs  predicate.rs  raw.rs  store.rs  subject.rs
src/nodes/literals/: boolean.rs  datetime.rs  decimal.rs  gyear.rs  mod.rs  string.rs
src/nodes/named/: mod.rs  statics.rs
src/nodes/named/statics/: mod.rs
src/nodes/raw/: blank.rs  iri.rs  mod.rs
src/nodes/raw/literals/: boolean.rs  datetime.rs  decimal.rs  gyear.rs  mod.rs  string.rs
src/nodes/store/: mod.rs  staged.rs  views.rs
src/nodes/store/interned/: blank.rs  iri.rs  literals.rs  mod.rs
src/triples/: mod.rs  store.rs  view.rs
src/triplestore/: index.rs  mod.rs  trig_impl.rs  views.rs
src/utils/: macros.rs  mod.rs
