[package]
name = "rdf-trig"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
chrono = { version = "0.4", optional = true }
indexmap = "2.13"
time = { version = "0.3", features = ["macros", "parsing"] }
fluent-uri = "0.4"
tokio = { version = "1.50", optional = true }

[features]
all = ["chrono", "time", "tokio"]
chrono = ["dep:chrono", "chrono/clock"]
time = ["time/formatting"]
tokio = ["dep:tokio"]